--- a/my.kv
+++ b/my.kv
@@ -7,18 +7,6 @@
 
     FloatLayout:
         cols:1
-        size_hint: 1, 1
-        
-        # Add Image to top of screen 
-        Image:
-            keep_ratio: False
-            source: 'ccalogo.png'
-            allow_stretch: True
-            size_hint_x: 1
-            padding: 0
-            #size_hint: None, None
-            #size: 400, 90
-            pos_hint: {'left':1, 'top':1}
 
         FloatLayout:
             size: root.width, root.height/2
@@ -93,8 +81,22 @@
 
     email: email
     password: password
+    my_coords: my_coords
 
     FloatLayout:
+
+        Label:
+            text:"GPS Coords:"
+            font_size: (root.width**2 + root.height**2) / 13**4
+            pos_hint: {"x":0.1, "top":1}
+            size_hint: 0.3, 0.10
+        
+        Label:
+            id: my_coords
+            text: "GPS not available"
+            font_size: (root.width**2 + root.height**2) / 13**4
+            pos_hint: {"x": 0.45 , "top":1}
+            size_hint: 0.3, 0.10
 
         Label:
             text:"Email: "
@@ -104,6 +106,7 @@
 
         TextInput:
             id: email
+            text:"test@test.com"
             font_size: (root.width**2 + root.height**2) / 13**4
             multiline: False
             pos_hint: {"x": 0.45 , "top":0.9}
@@ -148,27 +151,35 @@
     created:created
 
     FloatLayout:
+
+        Image:
+            keep_ratio: True
+            source: 'images/ccalogo.png'
+            allow_stretch: True
+            size_hint: 0.5, 0.5
+            pos_hint: {"x":0.25, "top":1}
+
         Label:
             id: n
-            pos_hint:{"x": 0.1, "top":0.9}
-            size_hint:0.8, 0.2
+            pos_hint:{"x": 0.1, "top":0.7}
+            size_hint:0.8, 0.1
             text: "Account Name: "
 
         Label:
             id: email
-            pos_hint:{"x": 0.1, "top":0.7}
-            size_hint:0.8, 0.2
+            pos_hint:{"x": 0.1, "top":0.5}
+            size_hint:0.8, 0.1
             text: "Email: "
 
         Label:
             id: created
-            pos_hint:{"x": 0.1, "top":0.5}
-            size_hint:0.8, 0.2
+            pos_hint:{"x": 0.1, "top":0.3}
+            size_hint:0.8, 0.1
             text: "Created: "
 
         Button:
             pos_hint:{"x":0.2, "y": 0.1}
-            size_hint:0.6,0.2
+            size_hint:0.6,0.1
             text: "Log Out"
             on_release:
                 app.root.current = "login"
